fix/extra space on mobile after google form

--- a/styles.css
+++ b/styles.css
@@ -379,6 +379,13 @@ body {
         left: -30px; /* Position relative to the new line */
         right: auto;
     }
+
+
+    /* GOOGLE FORM STYLE */
+    .google-form {
+        width: 100%;
+        height: 700px;
+    }
 }
 
 /* ------------------ TIMELINE WRITING ANIMATION ------------------ */
